clang/test/BSC/Negative/Method/BuiltInType/int_instance_function_multi_declaration_2/int_header_1.hbs


int int::to_int(int* this) { // expected-note {{previous definition is here}}
  return *this;
}
